# Data-Engineering-Real-Time-Streaming-Project

./: .gitignore  Data_Generation.py  Makefile  README.md  config.json  monitoring_directory_creation.py  pyproject.toml  sensor.py
Azure Databricks Notebooks/: Glucose Monitoring Streaming Business Logic.dbc  Glucose Monitoring Streaming Business Logic.ipynb  Trend Analysis.dbc  Trend Analysis.ipynb
Azure Functions/CacheUpdate/: conn_config.py  function_app.py  requirements.txt
Azure Functions/DatabaseInserts/: function_app.py
Azure Functions/ETLDuckdb/: function_app.py  glucose_aggregate.sql  inserting_fact_table.sql  requirements.txt
Azure Functions/TelegramAlerts/: function_app.py
real-time-live-streamlit-dashboard-python/: README.md  app.py
src/Simulation/: Thresholds_Retreiving.py  data_initialization_config.py  device_data_generator.py  patient_data_generator.py  user_behaviour.py
src/Tables_Preparation/Database_Creation/: alert_table_trigger.sql  create_tables.py  delete_tables.py  filling_tables.py  set_trigger.py  sql_tables_creation.sql
src/Tables_Preparation/Dimensional_Model_Prep/: export_adls.sql  glucose_dimensional_design.py  setup_storage_account.py  tables_creation.sql  tables_filling.sql
src/Tables_Preparation/Redis_Cache_Prep/: conn_config.py  (+2 more)
src/Telegram_Setup/: add_bots_to_channels.py  create_bots.py  create_channels.py  fetch_api_info.py  writing_to_env.py
src/Testing_Cache_Update/: add_new_user.py
src/Testing_ETL_Trend/: Quick_Data_Generation.py  etl_insert.py
terraform_workspace/: main.tf  providers.tf  variables.tf
(+42 files in other folders)
